force-app/main/default/objects/Candidate_Submission__c/Candidate_Submission__c.object-meta.xml
<CustomObject>
    <label>Candidate Submission</label>
    <nameField>
        <displayFormat>SUB-{00000}</displayFormat>
        <label>Submission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>