force-app/main/default/objects/Candidate_Submission__c/fields/Bill_Rate_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate_Quoted__c</fullName>
    <label>Bill Rate Quoted ($/hr)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>