force-app/main/default/objects/Candidate_Submission__c/fields/Interview_Count__c.field-meta.xml
<CustomField>
    <fullName>Interview_Count__c</fullName>
    <label>Interview Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>