force-app/main/default/objects/Candidate_Submission__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <label>Job Order</label>
    <referenceTo>Job_Order__c</referenceTo>
    <relationshipLabel>Candidate Submissions</relationshipLabel>
    <relationshipName>Candidate_Submissions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>