force-app/main/default/objects/Candidate_Submission__c/fields/Pay_Rate_Offered__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate_Offered__c</fullName>
    <label>Pay Rate Offered ($/hr)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>