force-app/main/default/objects/Candidate_Submission__c/fields/Placement_Created__c.field-meta.xml
<CustomField>
    <fullName>Placement_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placement Created</label>
    <type>Checkbox</type>
</CustomField>