force-app/main/default/objects/Candidate_Submission__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rate Mismatch</fullName>
            </value>
            <value>
                <fullName>Skills Gap</fullName>
            </value>
            <value>
                <fullName>Overqualified</fullName>
            </value>
            <value>
                <fullName>Underqualified</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Candidate Withdrew</fullName>
            </value>
            <value>
                <fullName>Client Cancelled Role</fullName>
            </value>
            <value>
                <fullName>Position Filled by Another Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>