force-app/main/default/objects/Candidate_Submission__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Submission Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>