force-app/main/default/objects/Candidate_Submission__c/fields/Submitting_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Submitting_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitting Recruiter</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Candidate Submissions</relationshipLabel>
    <relationshipName>Candidate_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>