force-app/main/default/objects/Candidate_Submission__c/validationRules/Do_Not_Submit_blocks_new_submissions.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Submit_blocks_new_submissions</fullName>
    <active>true</active>
    <errorConditionFormula>Candidate__r.Do_Not_Submit__c  = TRUE</errorConditionFormula>
    <errorMessage>This candidate has been flagged Do Not Submit. Contact your manager before proceeding</errorMessage>
</ValidationRule>