force-app/main/default/objects/Candidate_Submission__c/validationRules/Pay_rate_cannot_exceed_bill_rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Pay_rate_cannot_exceed_bill_rate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Pay_Rate_Offered__c)),
  NOT(ISBLANK(Bill_Rate_Quoted__c)),
  Pay_Rate_Offered__c &gt;= Bill_Rate_Quoted__c
)</errorConditionFormula>
    <errorDisplayField>Bill_Rate_Quoted__c</errorDisplayField>
    <errorMessage>Pay rate offered cannot be equal to or greater than the bill rate quoted. This submission would generate zero or negative margin.</errorMessage>
</ValidationRule>