force-app/main/default/objects/Candidate_Submission__c/validationRules/Rejection_reason_required_when_rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_reason_required_when_rejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Rejected&quot;),
    ISPICKVAL(Rejection_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please select a rejection reason before marking this submission as Rejected</errorMessage>
</ValidationRule>