force-app/main/default/objects/Candidate_Submission__c/validationRules/Sub_Recruiter_Locked_After_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Recruiter_Locked_After_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    NOT(ISNEW()),
    OR(
        ISCHANGED( Submitting_Recruiter__c)
    )
)</errorConditionFormula>
    <errorMessage>Submitting Recruiter Cannot Be Changed Once Record is Created. Create a new Submission or Contact Your Administrator</errorMessage>
</ValidationRule>