force-app/main/default/objects/Candidate_Submission__c/validationRules/Submission_Parent_Locked_After_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Submission_Parent_Locked_After_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    NOT(ISNEW()),
    OR(
        ISCHANGED(Candidate__c),
        ISCHANGED(Job_Order__c)
    )
)</errorConditionFormula>
    <errorMessage>&quot;Candidate and Job Order cannot be changed once a submission has been created. Create a new submission instead.&quot;</errorMessage>
</ValidationRule>